force-app/main/default/objects/Investment__c/fields/Buy_Amt__c.field-meta.xml
<CustomField>
    <fullName>Buy_Amt__c</fullName>
    <formula>Buy_Price__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>