force-app/main/default/objects/Investment__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>IF( Holding__c ,  TODAY()  - Buy_Date__c , Sell_Date__c - Buy_Date__c)</formula>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>