force-app/main/default/objects/Investment__c/fields/Holding__c.field-meta.xml
<CustomField>
    <fullName>Holding__c</fullName>
    <formula>ISBLANK( Sell_Date__c )  &amp;&amp;  ISBLANK( Sell_Price__c )</formula>
    <label>Holding</label>
    <type>Checkbox</type>
</CustomField>