force-app/main/default/objects/Investment__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>Profit_Amount__c  /  Buy_Amt__c</formula>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>