force-app/main/default/objects/Investment__c/fields/Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Profit_Amount__c</fullName>
    <formula>Sell_Amt__c  -  Buy_Amt__c</formula>
    <label>Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>