force-app/main/default/objects/Investment__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>