force-app/main/default/objects/Investment__c/fields/Sell_Amt__c.field-meta.xml
<CustomField>
    <fullName>Sell_Amt__c</fullName>
    <formula>Sell_Price__c  *  Quantity__c</formula>
    <label>Sell Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>