force-app/main/default/objects/Investment__c/validationRules/Sell_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Sell_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL(Sell_Date__c ), NOT( ISNULL( Sell_Price__c ) ))</errorConditionFormula>
    <errorDisplayField>Sell_Date__c</errorDisplayField>
    <errorMessage>Required if sell price is not null</errorMessage>
</ValidationRule>