force-app/main/default/objects/Investment__c/validationRules/Sell_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Sell_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL( Sell_Price__c ), NOT( ISNULL(  Sell_Date__c ) ))</errorConditionFormula>
    <errorDisplayField>Sell_Price__c</errorDisplayField>
    <errorMessage>Required if sell date is not null</errorMessage>
</ValidationRule>