force-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Script__c</columns>
    <columns>Holding__c</columns>
    <columns>Buy_Amt__c</columns>
    <columns>Buy_Date__c</columns>
    <columns>Buy_Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sell_Date__c</columns>
    <columns>Sell_Price__c</columns>
    <columns>Sell_Amt__c</columns>
    <columns>Profit_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>